java-backend-api/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-deploy
  labels:
    app.kubernetes.io/name: monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: monolith
  template:
    metadata:
      labels:
        app.kubernetes.io/name: monolith
    spec:
      containers:
        - name: monolith
          image: solo-seven/java-backend-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
