java-backend-api/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith-service
spec:
  selector:
    app.kubernetes.io/name: monolith
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
