java-backend-api/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolith-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.dsdemo.valesordev.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: monolith-service
                port:
                  number: 80
